# ghc-hs-meta

./: ghc-hs-meta.cabal
src/Language/Haskell/Meta/: Internal.hs  Parse.hs  Settings.hs  Translate.hs
test/: Main.hs
