cabal-version:  2.4

name:           ghc-hs-meta
version:        0.1.0.0
build-type:     Simple
author:         Zachary Wood
maintainer:     zac.wood@hey.com
license:        BSD-3-Clause
license-files:  LICENSE LICENSE-PyF
synopsis:       Translate Haskell source to Template Haskell expression
description:    Translate from Haskell source code to Template Haskell expressions using the GHC parser
category:       ghc,template-haskell
tested-with:    GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.1

extra-source-files: CHANGELOG.md README.md
  src/Language/Haskell/Meta/Internal.hs

library
  exposed-modules:
      Language.Haskell.Meta.Parse
      Language.Haskell.Meta.Settings
      Language.Haskell.Meta.Translate
  hs-source-dirs:
      src
  default-extensions:
      TemplateHaskell
      LambdaCase
  ghc-options: -Wall
  build-depends:
      base >= 4.14 && <4.17
    , template-haskell >= 2.16.0 && < 2.19
    , bytestring >= 0.10 && < 0.12
  default-language: Haskell2010

  if os(windows)
    if impl(ghc ^>= 8.10)
      build-depends:
        ghc-lib-parser ^>= 8.10
    if impl(ghc ^>= 9.0)
      build-depends:
        ghc-lib-parser ^>= 9.0
    if impl(ghc ^>= 9.2)
      build-depends:
        ghc-lib-parser ^>= 9.2
    mixins: ghc-lib-parser hiding (Language.Haskell.TH, Language.Haskell.TH.Syntax)
  else
    build-depends:
        ghc >= 8.10.7 && < 9.3
      , ghc-boot >= 8.10.7 && < 9.3


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
      TemplateHaskell
  hs-source-dirs:
    test
  build-depends:
      base
    , template-haskell
    , ghc
    , ghc-boot
    , hspec
    , bytestring
    , ghc-hs-meta

source-repository head
  type:     git
  location: https://github.com/zacwood9/ghc-hs-meta
